<resources>
    <string name="app_name">NotUserFriendlyCalculator</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="btn_0">0</string>
    <string name="btn_dot">.</string>
    <string name="division">/</string>
    <string name="multiply">*</string>
    <string name="btn_plus">+</string>
    <string name="minus">-</string>
    <string name="equal">=</string>
    <string name="back_space">DEL</string>
    <!-- На случай если ничего не сработает -->
    <string name="everything_is_bad">Вызвать Сатану</string>
    <string name="input"></string>
    <string name="output"></string>
    <string name="return_to_calculator">Return to calculator</string>
    <string name="setting">Выбор темы</string>
    <string name="style_return">Возврат к калькулятору</string>
    <string name="happy_theme">Веселая</string>
    <string name="doomer_theme">Грустная</string>
    <string name="choise">Выбери тему</string>

</resources>