<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_ground">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_choise"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choise"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="40sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/setting_key1"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/happy_theme"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_choise" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/setting_key2"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/doomer_theme"
            app:layout_constraintLeft_toRightOf="@+id/setting_key1"
            app:layout_constraintTop_toBottomOf="@id/text_choise" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <!--GridLayout был выбран в качестве макета из за простоты, легкоты, красоты,
     удобства в использовании и быстродействия отрисовки (рисует все в 1 проход) -->

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:columnCount="4"
        android:theme="@style/ButtonTheme">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_back_space"
            style="@style/ButtonStyle"
            android:text="@string/back_space" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_div"
            style="@style/ButtonStyle"
            android:text="@string/division" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_mult"
            style="@style/ButtonStyle"
            android:text="@string/multiply" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/everything_is_bad"
            style="@style/ButtonStyle"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:contentDescription="@string/everything_is_bad"
            app:icon="@drawable/fire"
            app:iconGravity="textTop"
            app:iconPadding="0.87dp"
            app:iconSize="40dp"
            app:tint="@color/white" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_7"
            style="@style/ButtonStyle"
            android:text="@string/btn_7" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_8"
            style="@style/ButtonStyle"
            android:text="@string/btn_8" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_9"
            style="@style/ButtonStyle"
            android:text="@string/btn_9" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_minus"
            style="@style/ButtonStyle"
            android:text="@string/minus" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_4"
            style="@style/ButtonStyle"
            android:text="@string/btn_4" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_5"
            style="@style/ButtonStyle"
            android:text="@string/btn_5" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_6"
            style="@style/ButtonStyle"
            android:text="@string/btn_6" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_plus"
            style="@style/ButtonStyle"
            android:layout_rowSpan="1"
            android:layout_columnSpan="1"
            android:layout_gravity="fill_vertical"
            android:text="@string/btn_plus" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_1"
            style="@style/ButtonStyle"
            android:text="@string/btn_1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_2"
            style="@style/ButtonStyle"
            android:text="@string/btn_2" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_3"
            style="@style/ButtonStyle"
            android:text="@string/btn_3" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_equal"
            style="@style/ButtonStyle"
            android:layout_rowSpan="2"
            android:layout_gravity="fill_vertical"
            android:text="@string/equal" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_0"
            style="@style/ButtonStyle"
            android:layout_row="3"
            android:layout_columnSpan="2"
            android:layout_gravity="fill_horizontal"
            android:text="@string/btn_0" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_dot"
            style="@style/ButtonStyle"
            android:text="@string/btn_dot" />

    </GridLayout>
</FrameLayout>